--- a/MSN-backend-66/package.json
+++ b/MSN-backend-66/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "openssl-nodejs": "^1.0.5"
   },
   "devDependencies": {},
