--- a/Server/package.json
+++ b/Server/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "openssl-nodejs": "^1.0.5"
   },
